change to cesium-tsunamilab in wepack build files

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body>
     <div id="root"></div>
     <% if(htmlWebpackPlugin.options.production) { %>
-        <script src="cesium/cesiumDll.js"></script>
+        <script src="cesium-tsunamilab/cesiumDll.js"></script>
     <% } %>
     <!--
       This HTML file is a template.
